# django-plastic-landing

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  compose.prod.yaml  compose.yaml  entrypoint.sh  init-letsencrypt.sh  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yaml  docs.yaml  test.yaml
apps/catalog/: admin.py  models.py  sitemaps.py  urls.py  views.py
apps/core/: admin.py  apps.py  models.py  urls.py  views.py
apps/leads/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
apps/pages/: admin.py  apps.py  models.py  urls.py  views.py
config/: sentry.py  urls.py
config/settings/: base.py  dev.py  docker.py  prod.py
deploy/selectel/: .env.example  compose.yaml  nginx-media.conf
docs/: index.md
docs/adr/: 0001-monolith-not-microservices.md  0002-compose-not-k8s.md  0003-ssr-not-spa.md  0004-tailwind-compiled-not-cdn.md  0005-write-lead-to-db-first.md  0006-language-policy.md  README.md
docs/explanation/: architecture.md  compliance-152fz.md
docs/how-to/: add-product-via-admin.md  deploy.md  enable-notification-channels.md  operations.md
docs/reference/: api-endpoints.md  data-model.md  environment.md
docs/tutorials/: getting-started.md
nginx/: nginx.conf
scripts/: prep_certs.py  prep_photos.py  shot.py
static/css/: demoplast.css
static/js/: site.js
templates/: 404.html  500.html  base.html
templates/admin/: base_site.html
templates/leads/: form.html  (+3 more)
tests/: factories.py  test_catalog.py  test_core.py  test_leads.py  test_pages.py  test_sentry.py
(+37 files in other folders)
